--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "ISC",
   "private": true,
   "scripts": {
-    "postinstall": "prisma db push",
+    "postinstall": "prisma generate",
     "dev": "next dev --turbopack --port 5173",
     "build": "next build",
     "start": "next start --port 5173",
